# teaching

./: README.md
2026 UBS - Sciences des données/CM/: session 2026-04-03.html  session 2026-04-03.md
2026 UBS - Sciences des données/TP/: preparation_donnees_sources.py  pyproject.toml  requirements.txt  tp.ipynb
2026 UBS - Sciences des données/TP/offline_data/: integrated_data.parquet
2026-06-03 UBS - Sciences des données/Cours/: cours 2026-04-03.md
2026-06-03 UBS - Sciences des données/Cours/session 2026-04-03_files/libs/bootstrap/: bootstrap-303a7ef2595af419f0c90304a78c4f07.min.css
2026-06-03 UBS - Sciences des données/TP/: preparation_donnees_sources.py  pyproject.toml  requirements.txt
2026-06-03 UBS - Sciences des données/TP/offline_data/: integrated_data.parquet
