[project]
name = "tp"
version = "1.0"
description = "Travaux pratiques de prévision de consommation électrique"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
